FIX button alignment in wizard widgets

--- a/Facades/js/jeasyui-metro-blue.template.css
+++ b/Facades/js/jeasyui-metro-blue.template.css
@@ -61,7 +61,8 @@ fieldset.exface_inputgroup legend {color: #404040; font-weight: bold; padding: 0
 .exf-widget-carousel ul.tabs li {float: none;}
 
 /* Wizard */
-.exf-wizard-toolbar > .exf-toolbar {display: inline-block}
+.exf-wizard-buttons > .exf-toolbar {display: inline-block}
+.exf-wizard-buttons > .exf-wizard-step-toolbar {float: right;}
 .exf-wizard-wrapper .tabs li:after {content: "›"; padding: 0 0 0 4px; font-weight: bold; font-size: 120%;}
 
 /* Text & headings */
